# slash-desktop

./: .gitignore  BETA.md  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.md  RELEASE_NOTES.md  SECURITY.md  TRADEMARK.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  update.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  query_expander.rs  state.rs
apps/desktop/src-tauri/src-tauri/examples/: debug_ollama.rs
apps/desktop/src-tauri/src/commands/: assets.rs  auth.rs  db.rs  drawing.rs  editor.rs  embedding.rs  fs.rs  graph.rs  maintenance.rs  mod.rs  screenshot.rs  search.rs  tasks.rs  transfer.rs
apps/desktop/src-tauri/src/commands/ai/: classification.rs  custom_skills.rs  data.rs  feedback.rs  ghostlink.rs  mod.rs  orchestrator.rs  provider_config.rs  relations.rs  service.rs  skills.rs  usage.rs  wikilink_relation.rs
apps/desktop/src-tauri/src/commands/sync/: client.rs  helpers.rs  mod.rs  path_mapping.rs  personal.rs  promote.rs  state.rs  team.rs
apps/desktop/src-tauri/src/core/: mod.rs  sidecar.rs  transfer_manager.rs
apps/desktop/src-tauri/src/core/ai/: folder_config.rs  keychain.rs  mod.rs  queue.rs  service.rs
apps/desktop/src-tauri/src/core/ai/orchestrator/: mod.rs  state.rs
apps/desktop/src-tauri/src/core/ai/provider/: mod.rs  ollama.rs  openai_compatible.rs
apps/desktop/src-tauri/src/core/ai/skills/: classification.rs  mod.rs  (+12 more)
apps/desktop/src-tauri/src/core/db/: manager.rs  migrations.rs  mod.rs  models.rs  schema.sql  task_scanner.rs
apps/desktop/src-tauri/src/core/embedding/: chunker.rs  denoise.rs  media_scheduler.rs  mod.rs  pipeline.rs  scheduler.rs  types.rs  versioning.rs  worker.rs
apps/desktop/src-tauri/src/core/watcher/: mod.rs
apps/desktop/src-tauri/src/diagnostics/: config.rs  db_stats.rs  logs.rs  mod.rs  system_info.rs
apps/desktop/src-tauri/tests/: test_fresh_db.rs
(+432 files in other folders)
